<resources>
    <string name="app_name">taskmaster</string>
    <string name="my_tasks">My Tasks</string>
    <string name="all_tasks">All Tasks</string>
    <string name="placeholder_image">placeholder image</string>
    <string name="add_task">Add Task</string>
    <string name="total_tasks">Total Tasks : 0</string>
    <string name="task_title">Task Title</string>
    <string name="task_description">Task Description</string>
    <string name="title_activity_all_tasks">AllTasks</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
...
    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="settings_button">settings button</string>
    <string name="user_settings">User Settings</string>
    <string name="username">Username</string>
    <string name="save">save</string>
    <string name="laundry">Do Laundry</string>
    <string name="homework">Do Homework</string>
    <string name="groceries">Go Grocery Shopping</string>
...
